[gd_scene load_steps=7 format=2]

[ext_resource path="res://interface/menus/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://interface/menus/pause/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://interface/menus/shared/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/menus/save_and_load/SaveMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/menus/pause/OptionsMenu.tscn" type="PackedScene" id=5]

[sub_resource type="GDScript" id=1]

script/source = "extends VBoxContainer

var focus_active = true setget set_focus_active

func _ready():
	self.focus_active = focus_active

func set_focus_active(value):
	focus_active = true
	var focus_mode = FOCUS_ALL if focus_active else FOCUS_NONE
	for child in get_children():
		child.focus_mode = focus_mode
"

[node name="PauseMenu" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="DarkOverlay" type="ColorRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.313726 )
_sections_unfolded = [ "Visibility" ]

[node name="Background" type="ColorRect" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -280.0
margin_right = 300.0
margin_bottom = 280.0
rect_min_size = Vector2( 600, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.136719, 0.136719, 0.136719, 1 )
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="Column" type="VBoxContainer" parent="Background" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
script = SubResource( 1 )
_sections_unfolded = [ "Focus", "Margin", "Rect", "Theme" ]

[node name="Label" type="Label" parent="Background/Column" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 68.0
margin_right = 600.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Pause Menu"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Focus", "Theme" ]

[node name="ContinueButton" parent="Background/Column" index="1" instance=ExtResource( 3 )]

margin_left = 100.0
margin_top = 107.0
margin_right = 500.0
margin_bottom = 171.0
text = "Continue"

[node name="ItemsButton" parent="Background/Column" index="2" instance=ExtResource( 3 )]

margin_left = 100.0
margin_top = 187.0
margin_right = 500.0
margin_bottom = 251.0
text = "Items"

[node name="SaveButton" parent="Background/Column" index="3" instance=ExtResource( 3 )]

margin_left = 100.0
margin_top = 267.0
margin_right = 500.0
margin_bottom = 331.0
text = "Save"

[node name="OptionsButton" parent="Background/Column" index="4" instance=ExtResource( 3 )]

margin_left = 100.0
margin_top = 347.0
margin_right = 500.0
margin_bottom = 411.0
text = "Options"

[node name="TitleScreenButton" parent="Background/Column" index="5" instance=ExtResource( 3 )]

margin_left = 100.0
margin_top = 427.0
margin_right = 500.0
margin_bottom = 491.0
text = "Title Screen"

[node name="SaveMenu" parent="." index="3" instance=ExtResource( 4 )]

visible = false

[node name="OptionsMenu" parent="." index="4" instance=ExtResource( 5 )]

visible = false

[connection signal="pressed" from="Background/Column/ContinueButton" to="." method="close"]

[connection signal="pressed" from="Background/Column/TitleScreenButton" to="." method="close"]


